--- a/staff/aitor-parra/duck-app/style.css
+++ b/staff/aitor-parra/duck-app/style.css
@@ -1,13 +1,15 @@
 * {
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 2px;
     
 }
 
 .body-grid {
     display: grid;
     gap: .2rem;
-    grid-template-columns: 684px;
-    grid-template-rows: 5% 30% 50%;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 70% 10%;
     grid-template-areas: 
     "header"  
     "main" 
@@ -16,22 +18,62 @@
 
 .duck-header {
     grid-area: header;
+    border: 1px solid black;
+    background-color:gold;
+
 }
 
 .duck-main {
     grid-area: main;
+    border: 1px solid black;
 }
 
 .duck-footer {
     grid-area: footer;
+    border: 1px solid black;
+    background-color:gold;
 }
 
-.figure__image {
-    /* border: 1px solid black; */
+/* .figure__image {
+    border: 1px solid black;
     width: 10vw;
     height: 10vw;
 }
 .duck-header {
     display: flexbox;
     align-items: center;
+} */
+
+body {
+    background-color: white;
+    border: 1px solid black;
+}
+
+/* ul */
+.duck-main__section {
+    
+    display: flexbox;
+    /* justify-content: space-around; */
+    border: 1px solid black;
+    
+}
+
+.duck-main__article {
+    display: flexbox;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(248, 247, 180);
+    border: 1px solid black;
+
+}
+
+li {
+    background-color: rgb(248, 247, 180);
+    border: 1px solid black;
+    list-style-type: decimal;;
+}
+
+img {
+    width:60px;
+    height: 60px;
 }
