--- a/staff/aitor-parra/duck-app/style.css
+++ b/staff/aitor-parra/duck-app/style.css
@@ -1,83 +1,132 @@
 * {
-    /* border: 1px solid black; */
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 2px;
-    
-}
-
-.body-grid {
-    display: grid;
-    gap: .2rem;
-    grid-template-columns: 100%;
-    grid-template-rows: 20% 70% 10%;
-    grid-template-areas: 
-    "header"  
-    "main" 
-    "footer";
-}
-
-.duck-header {
-    grid-area: header;
-    border: 1px solid black;
-    background-color:gold;
-
-}
-
-.duck-main {
-    grid-area: main;
-    border: 1px solid black;
-}
-
-.duck-footer {
-    grid-area: footer;
-    border: 1px solid black;
-    background-color:gold;
-}
-
-/* .figure__image {
-    border: 1px solid black;
-    width: 10vw;
-    height: 10vw;
-}
-.duck-header {
-    display: flexbox;
-    align-items: center;
-} */
-
-body {
-    background-color: white;
-    border: 1px solid black;
-}
-
-/* ul */
-.duck-main__section {
-    
-    display: flexbox;
-    /* justify-content: space-around; */
-    border: 1px solid black;
-    
-}
-
-.duck-main__article {
-    display: flexbox;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(248, 247, 180);
-    border: 1px solid black;
-
-}
-
-.hide {
+    box-sizing: border-box;
+    margin: 0;
+  }
+  
+  body {
+    background-color: silver;
+  }
+  
+  .show {
+    diplay: block;
+  }
+  
+  .hide {
     display: none;
-}
-
-li {
-    background-color: rgb(248, 247, 180);
-    border: 1px solid black;
-    list-style-type: decimal;;
-}
-
-img {
-    width:60px;
-    height: 60px;
-}
+  }
+  
+  .view {
+    border: 0.3rem solid orange;
+    border-radius: 1rem;
+    border-style: dotted;
+    background-color: rgb(41, 46, 184);
+    width: 100vw;
+    height: 100%;
+    padding: 3vw;
+    text-align: center;
+  }
+  
+  .search {
+    border: 0.3rem solid orange;
+    border-radius: 1rem;
+    border-style: dotted;
+    padding: 1rem;
+    margin: 0.5rem;
+  }
+  .search__icon {
+    font-size: 1.5rem;
+  }
+  .search__criteria {
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+  }
+  .search__submit {
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+  }
+  
+  .results {
+    border: 0.3rem solid orange;
+    border-radius: 1rem;
+    border-style: dotted;
+    padding: 1rem;
+    margin: 0.5rem;
+    list-style: none;
+    colunns: 3;
+  }
+  .results__item {
+    display: inline-block;
+    border: 0.3rem solid orange;
+    border-radius: 1rem;
+    border-style: dotted;
+    margin: 1rem;
+  }
+  
+  .item {
+    display: inline-block;
+    background-color: pink;
+    border: 0.3rem solid fuchsia;
+    border-radius: 1rem;
+    border-style: dotted;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 0.5rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .item__title {
+    color: fuchsia;
+  }
+  .item__image {
+    display: block;
+    border-radius: 0.5rem;
+    margin: 0.5rem auto 0.5rem auto;
+    max-width: 20vw;
+  }
+  .item__price {
+    display: inline-block;
+    border: 0.3rem solid white;
+    border-radius: 1rem;
+    border-style: dotted;
+    color: white;
+    background-color: red;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+  
+  .detail {
+    background-color: rgb(34, 138, 128);
+    border: 0.3rem solid rgb(66, 66, 79);
+    border-radius: 1rem;
+    border-style: dotted;
+    text-decoration: none;
+    padding: 0.5rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .detail__title {
+    color: blue;
+    font-size: 2rem;
+  }
+  .detail__image {
+    display: block;
+    border-radius: 1rem;
+    margin: 0.5rem auto 0.5rem auto;
+    max-width: 80vw;
+  }
+  .detail__description {
+    color: blue;
+  }
+  .detail__price {
+    display: inline-block;
+    border: 0.3rem solid white;
+    border-radius: 1rem;
+    border-style: dotted;
+    color: white;
+    background-color: red;
+    padding: 0.5rem;
+    font-size: 2rem;
+    margin: 0.5rem;
+  }
+  
+  /*# sourceMappingURL=style.css.map */
+  
