--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.sass
@@ -5,5 +5,9 @@
 @import ./components/Landing
 @import ./components/Login
 @import ./components/Register
-@import ./components/Team
+@import ./components/Team-create
+@import ./components/Team-remove
+@import ./components/Class-add
+@import ./components/Class-delete
+
 
