--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Landing/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Landing/index.sass
@@ -1,28 +1,45 @@
 .landing
-    font-family: 'Amaranth', sans-serif
+    //font-family: 'Amaranth', sans-serif
+    font-family: 'Roboto', sans-serif
+    //font-family: 'Lato', sans-serif
+    //font-family: 'Overpass', sans-serif
 
     &__title
         color: white
-        font-size: 4rem
+        font-size: 5rem
         text-shadow: .2rem -.2rem .2rem #192fbf
         font-style: italic
-        margin-right: 4rem
+        margin-right: 1rem
 
     &__subtitle
         color: white
         font-size: 2rem
         text-shadow: .2rem -.2rem .2rem #192fbf
-        font-style: italic
-        margin-left: 4rem
-
+        //font-style: italic
+        margin-left: 6rem
     
 
     &__options
         color: white
         font-size: 1rem
-        text-shadow: .1rem -.1rem .1rem #192fbf
+        text-align: center
+        //text-shadow: .1rem -.1rem .1rem #192fbf
+        margin-top: 3rem
+        font-weight: bold
 
-a 
-    text-shadow: none
+
+.logo
+    max-width: 100%
+    height: auto
+
+    &__image
+        text-align: center
+        height: 50%
+        width: 85%
+        margin-left: 1rem
+        margin-bottom: -3rem
+        margin-top: 3.3rem
+        margin-right: 1rem
+
 
 
