--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Team-remove/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Team-remove/index.sass
@@ -1,4 +1,4 @@
-.register
+.team-remove
     //font-family: 'Amaranth', sans-serif
     font-family: 'Roboto', sans-serif
     //font-family: 'Lato', sans-serif
@@ -7,12 +7,13 @@
     flex-direction: column
     align-items: center
 
-    &__form
-        width: 50%
+    &__goback
+        font-size: 1rem
         display: flex
-        flex-direction: column
-        align-items: center
-        
+        flex-direction: row
+        align-items: center 
+        color: white
+        margin-top: .5rem
 
     &__title
         color: white
@@ -20,11 +21,4 @@
         //text-shadow: .1rem -.1rem .1rem #192fbf
         margin-top: 3rem
         font-weight: 700
-    &__field
-        border-radius: .5rem
-        padding: .2rem
-        margin: .2rem 
-    &__submit
-        border-radius: .5rem
-        padding: .2rem
-        margin-top: .2rem
+
