--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.css
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.css
@@ -4,12 +4,14 @@
 }
 
 body {
-  background-color: #8fc8e6cd;
+  background-color: #50addfcd;
+}
+
+a {
+  text-shadow: none;
 }
 
 .view {
-  border: 0.3rem solid white;
-  border-radius: 1rem;
   background-color: #3671f0d7;
   height: 100%;
   width: 100vw;
@@ -18,31 +20,273 @@ body {
   margin-top: 5rem;
 }
 
+.board {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.calendar__table {
+  border: 0.1rem solid white;
+}
+.calendar__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.calendar__day-names {
+  color: white;
+}
+
+.team__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.team__create-remove {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+}
+
+.members {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+}
+
 .landing {
-  font-family: "Amaranth", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .landing__title {
   color: white;
-  font-size: 4rem;
+  font-size: 5rem;
   text-shadow: 0.2rem -0.2rem 0.2rem #192fbf;
   font-style: italic;
-  margin-right: 4rem;
+  margin-right: 1rem;
 }
 .landing__subtitle {
   color: white;
   font-size: 2rem;
   text-shadow: 0.2rem -0.2rem 0.2rem #192fbf;
-  font-style: italic;
-  margin-left: 4rem;
+  margin-left: 6rem;
 }
 .landing__options {
   color: white;
   font-size: 1rem;
-  text-shadow: 0.1rem -0.1rem 0.1rem #192fbf;
+  text-align: center;
+  margin-top: 3rem;
+  font-weight: bold;
 }
 
-a {
-  text-shadow: none;
+.logo {
+  max-width: 100%;
+  height: auto;
+}
+.logo__image {
+  text-align: center;
+  height: 50%;
+  width: 85%;
+  margin-left: 1rem;
+  margin-bottom: -3rem;
+  margin-top: 3.3rem;
+  margin-right: 1rem;
+}
+
+.login {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.login__field {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+.login__submit {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin-top: 0.2rem;
+}
+
+.register {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.register__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.register__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.register__field {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+.register__submit {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin-top: 0.2rem;
+}
+
+.team-create {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.team-create__goback {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  margin-top: 0.5rem;
+}
+.team-create__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.team-create__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.team-create__field {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+.team-create__submit {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin-top: 0.2rem;
+}
+
+.team-remove {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.team-remove__goback {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  margin-top: 0.5rem;
+}
+.team-remove__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+
+.add-class {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.add-class__goback {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  margin-top: 0.5rem;
+}
+.add-class__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.add-class__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.add-class__field {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+.add-class__submit {
+  border-radius: 0.1rem;
+  padding: 0.2rem;
+  margin-top: 0.2rem;
+}
+
+.delete-class {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.delete-class__goback {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  margin-top: 0.5rem;
+}
+.delete-class__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.delete-class__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.delete-class__field {
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+.delete-class__submit {
+  border-radius: 0.1rem;
+  padding: 0.2rem;
+  margin-top: 0.2rem;
 }
 
 /*# sourceMappingURL=index.css.map */
