--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Lesson-add/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Lesson-add/index.sass
@@ -1,4 +1,4 @@
-.delete-class
+.add-lesson
     //font-family: 'Amaranth', sans-serif
     font-family: 'Roboto', sans-serif
     //font-family: 'Lato', sans-serif
