--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.sass
@@ -7,7 +7,9 @@
 @import ./components/Register
 @import ./components/Team-create
 @import ./components/Team-remove
-@import ./components/Class-add
-@import ./components/Class-delete
+@import ./components/Lesson-add
+@import ./components/Lesson-delete
+@import ./components/Lesson-list
+
 
 
