--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Lesson-delete/index.sass
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/components/Lesson-delete/index.sass
@@ -1,4 +1,4 @@
-.add-class
+.delete-lesson
     //font-family: 'Amaranth', sans-serif
     font-family: 'Roboto', sans-serif
     //font-family: 'Lato', sans-serif
