--- a/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.css
+++ b/staff/aitor-parra/pyrene-ski/pyrene-ski-template/design/index.css
@@ -95,7 +95,7 @@ a {
   width: 85%;
   margin-left: 1rem;
   margin-bottom: -3rem;
-  margin-top: 3.3rem;
+  margin-top: 3rem;
   margin-right: 1rem;
 }
 
@@ -215,13 +215,13 @@ a {
   font-weight: 700;
 }
 
-.add-class {
+.add-lesson {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.add-class__goback {
+.add-lesson__goback {
   font-size: 1rem;
   display: flex;
   flex-direction: row;
@@ -229,36 +229,36 @@ a {
   color: white;
   margin-top: 0.5rem;
 }
-.add-class__form {
+.add-lesson__form {
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.add-class__title {
+.add-lesson__title {
   color: white;
   font-size: 1rem;
   margin-top: 3rem;
   font-weight: 700;
 }
-.add-class__field {
+.add-lesson__field {
   border-radius: 0.5rem;
   padding: 0.2rem;
   margin: 0.2rem;
 }
-.add-class__submit {
+.add-lesson__submit {
   border-radius: 0.1rem;
   padding: 0.2rem;
   margin-top: 0.2rem;
 }
 
-.delete-class {
+.delete-lesson {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.delete-class__goback {
+.delete-lesson__goback {
   font-size: 1rem;
   display: flex;
   flex-direction: row;
@@ -266,27 +266,56 @@ a {
   color: white;
   margin-top: 0.5rem;
 }
-.delete-class__form {
+.delete-lesson__form {
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.delete-class__title {
+.delete-lesson__title {
   color: white;
   font-size: 1rem;
   margin-top: 3rem;
   font-weight: 700;
 }
-.delete-class__field {
+.delete-lesson__field {
   border-radius: 0.5rem;
   padding: 0.2rem;
   margin: 0.2rem;
 }
-.delete-class__submit {
+.delete-lesson__submit {
   border-radius: 0.1rem;
   padding: 0.2rem;
   margin-top: 0.2rem;
+}
+
+.lesson-list {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+.lesson-list__title {
+  color: white;
+  font-size: 1rem;
+  margin-top: 3rem;
+  font-weight: 700;
+}
+.lesson-list__team-member {
+  color: white;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.lesson-list__team-list {
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 20px;
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  font-size: 0.7rem;
 }
 
 /*# sourceMappingURL=index.css.map */
